# 0g-ec-gpu

./: .gitignore  Cargo.toml  rust_fmt.sh  rustfmt.toml
ag-build/: Cargo.toml
ag-build/cl/: batch_multiexp.cl  common.cl  ec-fft.cl  ec.cl  field.cl  multiexp.cl  multiexp_backup.cl  test.cl
ag-build/src/: compile.rs  lib.rs
ag-build/src/source/: builder.rs  limb.rs  mod.rs  synthesis.rs  template.rs
ag-build/src/tests/: mod.rs  program.rs  test_ec.rs  test_fields.rs  types.rs
ag-cuda-ec/: Cargo.toml  build.rs
ag-cuda-ec/benches/: amt.rs  ec_fft.rs  multiexp.rs
ag-cuda-ec/src/: ec_fft.rs  lib.rs  multiexp.rs  pairing_suite.rs  test_tools.rs
ag-cuda-ec/tests/: ec_fft.rs  multiexp.rs
ag-cuda-proxy/: Cargo.toml
ag-cuda-proxy/src/: context.rs  ctx_stack_guard.rs  kernel.rs  lib.rs  module.rs  params.rs  pointer.rs
ag-cuda-workspace-macro/: Cargo.toml
ag-cuda-workspace-macro/src/: lib.rs
ag-types/: Cargo.toml
ag-types/src/: impls.rs  lib.rs
ec-gpu/: Cargo.toml
ec-gpu-gen/: Cargo.toml
ec-gpu-gen/src/: cl_tests.rs  fft.rs  fft_cpu.rs  fftg.rs  fftg_cpu.rs  lib.rs  multiexp.rs  multiexp_cpu.rs  source.rs
ec-gpu-gen/src/cl/: ec.cl  fftg.cl  multiexp.cl  test.cl
ec-gpu-program/: Cargo.toml
ec-gpu-program/src/: lib.rs  place_holder.rs  program.rs
ec-gpu-proxy/: Cargo.toml
ec-gpu-proxy/benches/: multiexp.rs
ec-gpu-proxy/src/: ec_fft.rs  ec_fft_cpu.rs  fft.rs  fft_cpu.rs  lib.rs  multiexp.rs  multiexp_cpu.rs  threadpool.rs
ec-gpu-proxy/tests/: ec_fft.rs  fft.rs  multiexp.rs
ec-gpu/src/: impls.rs  lib.rs
gpu-ark-tests/: Cargo.toml  build.rs
gpu-ark-tests/benches/: multiexp.rs
gpu-ark-tests/tests/: fft.rs  fftg.rs  multiexp.rs
