[workspace]
members = [
  "ag-types",
  "ag-build",
  "ec-gpu-program",
  "ec-gpu-proxy"
]
resolver = "2"

[workspace.dependencies]
ag-types = { path = "./ag-types" }
ag-build = { path = "./ag-build" }
ec-gpu-program = { path = "./ec-gpu-program" }

rust-gpu-tools = { version = "0.7.0", default-features = false }
ark-ff = "0.4.0"
lazy_static = "1.2"