[package]
name = "ag-cuda-ec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ag-cuda-proxy = { workspace = true }
rustacuda = { workspace = true }
ag-types = { workspace = true }
ag-cuda-workspace-macro = { workspace = true }

ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = { version = "0.4.0", features = ["getrandom"] }

ark-bls12-381 = { version = "0.4", optional = true }
ark-bn254 = { version = "0.4", optional = true }


once_cell = "1.19"

[dev-dependencies]
ark-poly = { version = "0.4.0", features = ["parallel"] }
ark-ec = { version = "0.4.2", features = ["parallel"] }
rayon = "1.10"


[build-dependencies]
ag-build = { workspace = true, features = ["cuda"] }
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"

[features]
default = ["bn254"]
bn254 = ["ark-bn254"]
bls12-381 = ["ark-bls12-381"]

[[bench]]
name = "ec_fft"
harness = false

[[bench]]
name = "multiexp"
harness = false

[[bench]]
name = "amt"
harness = false