[package]
name = "ag-cuda-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = { workspace = true }
ag-types = { workspace = true }
once_cell = "1.19"

[features]
default = []
timer = []