[package]
name = "ag-types"
version = "0.2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2021"
description = "Traits for field and eliptic curve operations on GPUs"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
repository = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"

[dependencies]
ark-ff = "0.4.0"
ark-ec = "0.4.0"

[dev-dependencies]
ark-bls12-381 = "0.4.0"