[package]
name = "ec-gpu-proxy"
version = "0.7.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2021"
description = "Code generator for field and eliptic curve operations on the GPUs"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
repository = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"
rust-version = "1.62.1"

[dependencies]
bitvec = "1.0.1"
crossbeam-channel = "0.5.1"
ag-types = { workspace = true }
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
hex = "0.4"
log = "0.4.14"
num_cpus = "1.13.0"
once_cell = "1.8.0"
rayon = "1.5.1"
yastl = "0.1.2"
ec-gpu-program = { workspace = true }
rust-gpu-tools = { workspace = true, optional = true }


[dev-dependencies]
criterion = "0.4"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
rand = "0.8"
lazy_static = "1.2"
temp-env = "0.3.0"
rand_core = "0.6.3"
rand_xorshift = "0.3.0"
fil_logger = "0.1.6"
ec-gpu-program = { workspace = true, features = ["test-tools"] }
ark-poly = { version = "0.4.0", features = ["parallel"] }
ag-build = { workspace = true }

[features]
default = []
cuda = [ "rust-gpu-tools", "ag-build/cuda", "ec-gpu-program/cuda" ]
opencl = [ "rust-gpu-tools", "ag-build/opencl", "ec-gpu-program/opencl" ]
test-tools = []

[[bench]]
name = "multiexp"
harness = false