# NOTE vmx 2022-07-07: Using the `__private_bench` feature of `blstrs` is just temporarily until
# https://github.com/zkcrypto/group/pull/29 is fixed. Then we won't need the exports of `Fp` and
# `Fp2` any more.
[package]
name = "gpu-ark-tests"
version = "0.1.0"
edition = "2021"
description = "Test for the ec-gpu project"
homepage = "https://github.com/filecoin-project/ec-gen"
repository = "https://github.com/filecoin-project/ec-gen"
license = "MIT/Apache-2.0"
publish = false

[dev-dependencies]
criterion = "0.4"
ec-gpu = { path = "../ec-gpu", default-features = false }
ec-gpu-gen = { path = "../ec-gpu-gen", default-features = false }
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-poly = { version = "0.4.0", features = ["parallel"] }
fil_logger = "0.1.6"
rand = "0.8"
rayon = "1.5.3"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"

[build-dependencies]
ec-gpu-gen = { path = "../ec-gpu-gen" }
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"

[features]
default = ["cuda", "opencl"]
cuda = ["ec-gpu-gen/cuda"]
opencl = ["ec-gpu-gen/opencl"]

# [[bench]]
# name = "multiexp"
# harness = false
